[tool.poetry]
name = "fastapi-sub-modules-logger-kit"
version = "0.1.0"
description = "A FastAPI sub-module for advanced logging capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
loguru = "^0.7.2"
pydantic = "^2.4.2"
starlette = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
